fix z-index for transform

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background-color: #EAC4D5;
   top: 0px;
   padding: 8px;
-  z-index: -2;
+  z-index: 2;
   
 }
 .nav ul {
